# tree-sitter-ispc

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml  publish_crate.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/html/: SGEMM_kernels.html  mandelbrot.html
queries/: highlights.scm
src/: grammar.json  node-types.json
test/: parse.sh
test/corpus/: literals.txt  special.txt  statements.txt  templates.txt  type_and_storage.txt
tools/: extract_stdlib.sh
